# stuff

./: .gitignore  README.md  pyproject.toml
docs/: workspace.md
stuff/: ARGBdraw.py  __init__.py  augment.py  azure.py  coord.py  datatable.py  detections.py  display.py  draw.py  embedding.py  engine.py  facerec.py  gdrive.py  image.py  img_dedup.py  infer_grid.py  inference_wrapper.py  llm.py  llm_guff.py  match.py  misc.py  mp_workqueue.py  pcap_stuff.py  platform_stuff.py  reid.py  result_cache.py  test_stuff.py  ubtrk2.py  ultralytics.py  ultralytics_ap.py  ultralytics_wrapper.py  vectordb.py  video.py  workspace.py
stuff/inference/: __init__.py  base.py  factory.py  postprocess.py  types.py
stuff/inference/backends/: __init__.py  detectron2_backend.py  mmdet_backend.py  rfdetr_backend.py  ultralytics_backend.py  upyc_backend.py
tests/: test_ubtrk2.py  test_workspace.py
