[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stuff"
version = "0.1.2"
description = "General utilities for Python projects"
authors = [
    { name = "Bernando Cribbenza", email = "bernando.cribbenza@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = []