[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stuff"
version = "0.1.2"
description = "Shared Python utilities for ML pipelines, drawing, I/O, inference, and tooling"
authors = [
    { name = "Bernando Cribbenza", email = "bernando.cribbenza@gmail.com" }
]
license = { text = "AGPL-3.0 OR Ubon-Cooperative" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "License :: Other/Proprietary License",
]
dependencies = []